# bubble-os

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Xargo.toml  docker-compose.yml  kernel.s  outp.txt  qemu-run.sh  qemu.py  rust-toolchain.toml  x86_64-bubble-os.json
.cargo/: config.toml
.obsidian/: workspace.json
resources/: hello.txt  resource.txt
script/: send_packet.py
src/: acpi.rs  core_requirements.rs  efi.rs  gdt.rs  interrupts.rs  io.rs  lib.rs  main.rs  print.rs  serial.rs  test.rs
src/ahci/: fis.rs  hba.rs  mod.rs  port.rs
src/elf/: elf_parser.rs  loader.rs  mod.rs
src/fs/: fat.rs  fat_fs.rs  fs.rs  mod.rs
src/io/: log.rs  mod.rs  print.rs  serial.rs
src/mem/: heap.rs  linked_list_allocator.rs  mod.rs  page_frame.rs  region.rs  simple_page_frame_allocator.rs  stack.rs  stack_alloc.rs  stack_allocator.rs
src/net/: dma_ptr.rs  e1000.rs  mod.rs
src/scheduling/: mod.rs  process.rs
src/syscall/: cd.rs  clock_gettime.rs  close.rs  create.rs  execute.rs  exit.rs  mkdir.rs  mod.rs  nanosleep.rs  open.rs  read.rs  read_dir.rs  rmdir.rs  truncate.rs  unlink.rs  wait_for_process.rs  write.rs  yld.rs
src/time/: mod.rs
src/utils/: safe.rs
userspace/: Makefile
userspace/cat/: Cargo.toml  cat.s  linker.ld  main.rs
userspace/cd/: cd.s  linker.ld
userspace/edit/: Cargo.toml  main.rs
userspace/ls/: Cargo.toml  linker.ld  ls.s  ls_old.s  main.rs
userspace/sample/: main.s
userspace/sample2/: linker.ld  main.s
userspace/shell/: Cargo.toml  linker.ld  main.rs  shell.s  x86_64-bubble-userspace.json
userspace/ulib/: Cargo.toml  (+1 more)
(+31 files in other folders)
