[package]
name = "bubble-os"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = "0.14.11"

[features]
default = ["nightly", "instructions"]
instructions = []
nightly = ["abi_x86_interrupt"]
abi_x86_interrupt = []

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html