[package]
name = "bubble-os"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
multiboot2 = { version = "0.19.0", default-features = false }
bitflags = "2.4.1"
x86_64 = "0.14.11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html